--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.0.8 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. April 2017
+	* Fixed a bug with a missing structure parameter character
 1.0.7 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 19. March 2017
 	* Fixed a bug with incorrectly set transition cutoff
 1.0.6 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 15. March 2017
