--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.0.9 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 13. April 2017
+	* Improved handling of missing stockholm input
 1.0.8 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. April 2017
 	* Fixed a bug with a missing structure parameter character
 1.0.7 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 19. March 2017
