Fixed sampling of colors for multiple models

--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.1.0 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 13. April 2017
+	* Fixed sampling of colors for multiple models
 1.0.9 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 13. April 2017
 	* Improved handling of missing stockholm input
 1.0.8 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. April 2017
