--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.1.3 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 9. May 2017
+	* Now using same simplified label color scheme as CMDraw 
 1.1.2 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. May 2017
 	* Labels for columns are now passed to alignment visualisation instead of nodes
 	* Improved mapping node to column labels
