--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.1.5 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 23. May 2017
+	* Fixed normalization of newly added colors
 1.1.4 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 22. May 2017
 	* Color scheme is now more robust for grayscale-printing
 1.1.3 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 9. May 2017
