--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.1.7 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. June 2017
+	* Improved placment of legend
 1.1.6 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 23. May 2017
 	* Now using sRGB colors, some improvements for color-blind users
 1.1.5 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 23. May 2017
