--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.1.8 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 8. June 2017
+	* Minimal and simple visualisation now also support line mode
 1.1.7 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. June 2017
 	* Improved placment of legend
 1.1.6 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 23. May 2017
@@ -8,7 +10,7 @@
 1.1.4 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 22. May 2017
 	* Color scheme is now more robust for grayscale-printing
 1.1.3 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 9. May 2017
-	* Now using same simplified label color scheme as CMDraw 
+	* Now using same simplified label color scheme as CMDraw
 1.1.2 Florian Eggenhofer <egg@informatik.uni-freiburg.de> 7. May 2017
 	* Labels for columns are now passed to alignment visualisation instead of nodes
 	* Improved mapping node to column labels
